client/css/styles.css
body {
    margin: 0;
    background-color: #000;
    height: 100%;
    font-size: 1em;
    background: url('../bg-wood.jpg') no-repeat;
    background-attachment: fixed;
}

.button {
    cursor: pointer;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

.centered {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 50%;
}

.centered-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 50%;
}

.full-width {
    width: 100%;
}

.centered > div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.form-row {
    display: flex;
    flex-direction: row;
}

#full-size-image {
    display: none;
}

#canvas {
    /* overflow: hidden; */
    width: 100%;
    height: 100%;
    position: fixed;
    transform-origin: 0 0;
}

#solved-preview {
    position:absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

#form-container {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
}

.form-control {
    background: transparent;
    border: none;
}

.form-row {
    margin-bottom: 2em;
}

#form-container form {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#image-upload-ctrl {
    display: flex;
}
#image-upload-ctrl input {
    display: block;
    width: 100%;
}

label {
    width: 100%;
    margin-bottom: 15px;
}

#upload {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#puzzle-size-ctrl {
    display: none;
}

#submit-ctrl {
    display: none;
}

#stage {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#solved-puzzle-area {
    position: absolute;
    border: 10px solid #000;
}

#image-preview {
    position: relative;
    flex-direction: column;
    align-self: center;
}

#image-preview img {
    height: 100%;
}

#play-boundary {
    position: absolute;
    transform-origin: 0 0;
}

#play-boundary:before {
    content: "";
    display: block;
    background: #ddd;
    opacity: .2;
    width: 100%;
    height: 100%;
}

.fill-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#image-crop {
    position: absolute;
    display: none;
    top: 0;
    left: 0;
    cursor: move;
    background-color: #fff;
    opacity: .3;
}

.image-crop-drag-handle {
    display: none;
}

#image-crop-drag-handle-tl {
    position: absolute;
    top: -15px;
    left: -15px;
    width: 15px;
    height: 15px;
    cursor: move;
    background-color: #fff;
}
#image-crop-drag-handle-tr {
    position: absolute;
    top: -15px;
    right: -15px;
    width: 15px;
    height: 15px;
    cursor: move;
    background-color: #fff;
}
#image-crop-drag-handle-br {
    position: absolute;
    bottom: -15px;
    right: -15px;
    width: 15px;
    height: 15px;
    cursor: move;
    background-color: #fff;
}
#image-crop-drag-handle-bl {
    position: absolute;
    bottom: -15px;
    left: -15px;
    width: 15px;
    height: 15px;
    cursor: move;
    background-color: #fff;
}

#image-crop:before {
    content: ' ';
    display: inline-block;
}

#puzzle-setup--main-options {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 60%;
    margin-bottom: 5em;
}

#puzzle-shape-ctrl {
    display: none;
}

#puzzle-crop-ctrl { 
    display: flex;
}

#puzzle-setup {
    width: 100%;
    height: 100%;
}

#puzzle-creator {
    position: relative;
    width: calc(100% - 1em);
    height: calc(100% - 1em);
}

.bg-screen {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: .7;
    background-color: #cecece;
}

.inner-content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 1em;
}

#puzzle-setup--image {
    width: 50%;
}

#puzzle-setup--image_preview {
    height: 100%;
    position: relative;
    margin-bottom: 2em;
}

#puzzle-setup--image_preview img {
    max-height: 100%;
    max-width: 100%;
}

#puzzle-setup--image_input {
    margin: 0 auto;
}

#puzzle-setup--options {
    width: 40%;
}

label, input[type=checkbox] {
    display: inline;
}
.align-content-row {
    flex-direction: row;
}

.form-label-row {
    display: block;
    margin-bottom: 1em;
}
.form-label-row [type=radio] {
    display: inline;
}

.form-label-row--heading {
    margin-bottom: .3em;
}

.centered {
    display: flex;
    justify-content: center;
    width: 100%;
}

#puzzle-size-input-label {
    display: inline;
}

#full-image-viewer {
    position: absolute;
}

#controls {
    position: fixed;
    top: 0;
    left: 70px;
    font-size: 100%;
    z-index: 100;
    display: none;
}

#controls-handle {
    cursor: pointer;
    top: 0;
    left: -70px;
    position: absolute;
    color: #000;
    background-color: rgb(255, 255, 255);
    padding: 15px;
    opacity: .8;
    width: 66px;
}
#controls-handle:hover {
    background: #fefefe;
}
#controls-panel {
    color: #000;
    padding: 15px;
    background: #fefefe;
    opacity: .8;
    position: absolute;
    top: 0;
    left: 0;
    width: 300px;
}

#controls-panel.is-hidden {
    left: -9999px;
}

#preview-hide {
    display: none;
}

#inner-pieces-on {
    display: none;
}

#debug-info {
    position: fixed;
    z-index: 100;
    top: 20px;
    right: 20px;
    padding: 20px;
    background-color: #000;
    color: #fff;
    width: 400px;
    display: none;
    font-size: 12px;
}

.debug-info-row {
    margin-bottom: 10px;
}

.debug-info-row .label {
    float: left;
}

.debug-info-row .readout {
    float: right;
}

.group-container {
    position: absolute;
}

#gallery {
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    width: 80%;
}

.puzzle-list-item {
    width: 46%;
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}

.puzzle-list-item:nth-child(odd) {
    margin-right: 4%;
}

.puzzle-list-item__image {
    width: 100%;
}

.puzzle-list-item p {
    margin: 1em 0;
}

.group:after {
    content: "";
    display: table;
    clear: both;
}

.group-container:focus:not(.subgroup){
    border: 2px solid;
    z-index: 99;
}

.puzzle-piece {
    background-color: transparent;
    background-repeat: no-repeat;
    transform-origin: 0 0;
}

.js-highlight {
   border: 4px solid red;
}

.vertical-center {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.horizontal-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.centered {
    align-items: center;
}

.js-admin-only {
    margin-bottom: 2em;
}

#pieces-container {
    pointer-events: none;
}

@media only screen and (min-width: 800px) and (min-height: 800px){
    body {
        font-size: 1em;
    }
    .form-row {
        flex-direction: column;
    }

    #puzzle-creator {
        width: 700px;
        height: 45%;
    }

    #puzzle-setup--image_preview {
        height: 250px;
        width: 250px;
    }
    
    .inner-content {
        padding: 2em;
    }
}

